load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_junit5_test")
load("//third_party/rules_jmh:defs.bzl", "jmh_java_benchmarks")

java_library(
    name = "terraform",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    resources = glob(include = ["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/command",
        "//modules/common",
        "//third_party:minestom",
        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        "@maven//:com_google_code_gson_gson",
        "@maven//:io_github_jglrxavpok_hephaistos_common",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
    ],
)

java_binary(
    name = "snapshot_viewer",
    main_class = "net.hollowcube.test.snapshot.viewer.SnapshotViewerServer",
    runtime_deps = [
        "//modules/terraform/src/test/java/net/hollowcube/test/snapshot/viewer",
        "//modules/test",
    ],
)

java_junit5_test(
    name = "terraform_test",
    srcs = glob(include = ["src/test/java/**/*.java"]),
    resources = glob(include = ["src/test/resources/**/*"]),
    test_class = "net.hollowcube.terraform.TerraformTestSuite",
    deps = [
        ":terraform",
        "//modules/command",
        "//modules/common",
        "//modules/test",
        "//third_party:minestom",
        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)

jmh_java_benchmarks(
    name = "terraform_bench",
    srcs = glob(include = ["src/bench/java/**/*.java"]),
    resources = glob(include = ["src/bench/resources/**/*"]),
    deps = [
        ":terraform",
        "//modules/command",
        "//modules/common",
        "//modules/test",
        "//third_party:minestom",
        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
