load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS")

java_library(
    name = "test",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_suite_api",
        "@maven//:org_opentest4j_opentest4j",
    ],
    runtime_deps = JUNIT5_DEPS + [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
    ],
    deps = [
        "//third_party:auto_service",
        "//third_party:minestom",
        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        "@maven//:io_github_jglrxavpok_hephaistos_common",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_opentest4j_opentest4j",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
