load("@rules_java//java:defs.bzl", "java_library", "java_plugin")

java_plugin(
    name = "javac_plugin",
    srcs = glob(include = ["src/main/java/**/*.java"]),
    javacopts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
    ],
    resources = glob(include = ["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:auto_service",
        "@maven//:org_burningwave_core",
    ],
)

java_library(
    name = "compile",
    exported_plugins = [":javac_plugin"],
    visibility = ["//visibility:public"],
)
