java_library(
    name = "demo",
    srcs = glob(["*.java"]),
    resources = [
        "//:packer_development_server",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//modules/command",
        "//modules/common",
        "//modules/core",
        "//modules/terraform",
        "//third_party:helidon",
        "//third_party:minestom",
        "@maven//:ch_qos_logback_logback_classic",
        #        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_slf4j_jul_to_slf4j",
    ],
)
