java_library(
    name = "viewer",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//modules/common",
        "//modules/terraform",
        "//third_party:helidon",
        "//third_party:minestom",
        "@maven//:ch_qos_logback_logback_classic",
        #        "@maven//:com_github_mworzala_mc_debug_renderer_minestom",
        "@maven//:net_kyori_adventure_api",
        "@maven//:net_kyori_adventure_text_serializer_plain",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_slf4j_jul_to_slf4j",
    ],
)
